tests/ui/fail/repr/invalid_repr_width_1.rs
use modular_bitfield::prelude::*;

#[bitfield]
#[repr(u16)] // Too few bits!
pub struct SignedInt {
    sign: bool,
    value: B31,
}

fn main() {}
